# Musicacupuncture-sell-bot

./: .env.example  .gitattributes  .gitignore  Cursor-promptar.txt  DEPLOY_RAILWAY.md  Ljud-Beskrivning-from-Perplexity.txt  Ljud-fil-lista+beskrivning.txt  Ljud-fil-lista.txt  Ljud-fil-lista_filtrerad-minus-6.txt  Procfile  Telegram-bot-senaste.rar  Telegram-bot.rar  about.html  admin_log.json  bot.py  index.html  miniapp.html  nixpacks.toml  pyproject.toml  requirements.txt  run_bot.py  run_server.py  sales_log.json  telegram_music_sales_bot_simple_version.py  tracks.py  upload_songs.py  website.html
Version-2-Pro/: telegram_music_sales_bot_simple_version.py
_site/: miniapp.html
docs/: ADMIN_README.md  DEPLOY_BOT_KOMPLETT_SV.md  DEPLOY_MINIAPP_GITHUB_PAGES_SV.md
music_sales/: __init__.py  about_michael.py  admin_log.py  admin_panel.py  bot_app.py  bot_entry.py  bot_handlers.py  buy_callbacks.py  buy_command.py  buy_constants.py  buy_payments.py  catalog.py  config.py  env_bootstrap.py  file_id_delivery.py  free_track_cover_render.py  frontend_catalog_sync.py  google_drive_delivery.py  health_report.py  logging_setup.py  mp3_duration.py  pcloud_delivery.py  sales_log.py  server.py  stripe_track_products.py  tracks_admin_persist.py  web_entry.py
musicacupuncture_sell_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: pcloud_build_catalog_snippet.py  sync_frontend_from_env.py
tests/: conftest.py  test_about_config.py  test_admin_config.py  test_bot_app.py  test_bot_handlers.py  test_buy_flow.py  test_catalog.py  test_file_id_delivery.py  (+8 more)
(+4 files in other folders)
